--- a/ex015 - bulma/index.html
+++ b/ex015 - bulma/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Currículo  Adriel</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="node_modules/bulma/css/bulma.css">
   <script src="https://kit.fontawesome.com/ebcb62a93b.js" crossorigin="anonymous"></script>
